--- a/js_demo/index.html
+++ b/js_demo/index.html
@@ -14,6 +14,7 @@
     <nav id="navbar">
         <div id="navbar-header">
             <h1>Web Sayfam</h1>
+
         </div>
     </nav>
     <div class="container">
@@ -21,7 +22,7 @@
         <div id="popup-page">
             <span id="close"><a href="" onclick="close()">X</a></span>
             <div id="popup-container">
-                <div id="popup-form"> 
+                <div id="popup-form">
                     <form>
                         <div class="form-group">
                             <input type="text" name="name" id="name" placeholder="Adınız">
@@ -29,8 +30,9 @@
                         <div class="form-group">
                             <input type="password" name="password" id="pwd" placeholder="Parolanız">
                         </div>
-                        <div class="form-group">
-                            <button id="login" type="submit" onclick="a()">Giriş Yap</button>
+                        <div id="btns" class="form-group">
+                            <button class="login" type="submit" onclick="a()">Giriş Yap</button>
+                            <button class="signin" type="submit" onclick="b()">Kaydol</button>
                         </div>
                     </form>
                 </div>
